# random-fruit-picker

./: CMakeLists.txt  README.md  main  main.cpp
include/: fruit.h  fruitPicker.h
scripts/: build.sh  configure.sh  run.sh
src/: fruit.cpp  fruitPicker.cpp  main.cpp
